WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89486
Fix scrollbar layers being misplaced with a clipped owner layer
https://bugs.webkit.org/show_bug.cgi?id=89486
Summary
Fix scrollbar layers being misplaced with a clipped owner layer
Adrienne Walker
Reported
2012-06-19 11:27:25 PDT
Fix scrollbar layers being misplaced with a clipped owner layer
Attachments
Patch
(5.33 KB, patch)
2012-06-19 11:33 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2012-06-19 11:31:19 PDT
See
https://code.google.com/p/chromium/issues/detail?id=132839
.
Adrienne Walker
Comment 2
2012-06-19 11:33:54 PDT
Created
attachment 148370
[details]
Patch
WebKit Review Bot
Comment 3
2012-06-19 14:00:28 PDT
Comment on
attachment 148370
[details]
Patch Clearing flags on attachment: 148370 Committed
r120750
: <
http://trac.webkit.org/changeset/120750
>
WebKit Review Bot
Comment 4
2012-06-19 14:00:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug